--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,6 @@ quickstats_rerun.pkl
 quickstats_rerun2.pkl
 quickstats_rerun3.csv
 quickstats_rerun3.pkl
+data.zip
+data_angles/test/
+data_rerun4/
